--- a/dada/templates/send_email_test_recipient_widget.tmpl
+++ b/dada/templates/send_email_test_recipient_widget.tmpl
@@ -1,12 +1,15 @@
 <!-- begin send_email_test_recipient_widget.tmpl --> 
-<div id="send_test_messages_to"> 
+<div id="send_test_messages_to"> 	
 	<div class="row">
-		<div class="large-3 columns">
-			<label for="test_recipient" class="large-right medium-right">
+		<div class="large-3 medium-3 columns">
+			<label 
+				for="test_recipient" 
+				class="medium-only-text-right large-only-text-right"
+			>
 				Send Test Messages To:
 			</label>
 		</div>
-		<div class="large-9 columns">
+		<div class="large-9 medium-9 columns">
 			<input 
 				type="text" 
 				id="test_recipient" 
